update on the tasks1 and main on tasks

--- a/tasks/tarefa1.yml
+++ b/tasks/tarefa1.yml
@@ -1,4 +1,4 @@
 ---
-    - name: All IPv4 addresses
-      debug: msg="{{ ansible_all_ipv4_addresses }}"
-
+- name: Upgrade the OS (apt-get dist-upgrade)
+  apt:
+    upgrade: dist
