--- a/tasks/tarefa2.yml
+++ b/tasks/tarefa2.yml
@@ -1,4 +1,4 @@
 ---
-- name: Update the OS
+- name: Run the equivalent of "apt-get update" as a separate step
   apt:
-   name: update
+   update_cache: yes
