--- a/tasks/tarefa3.yml
+++ b/tasks/tarefa3.yml
@@ -1,4 +1,8 @@
-- name: Install apache httpd  (state=present is optional)
+- name: ensure apache is at the latest version
   apt:
     name: apache2
-    state: present
+    state: latest
+- name: ensure apache is running
+  service:
+    name: apache2
+    state: started
