--- a/tasks/tarefa5.yml
+++ b/tasks/tarefa5.yml
@@ -1,4 +1,5 @@
 ---
 - name: instalar website local
     src: https://github.com/SkyDuD3/Website-Historia-dos-computadores
+    version: main
     dest: /var/www/html/
